Encode the capture stream as length-delimited protobuf
docs/schema/jonoffcpu-capture.proto now defines the stream: a 12-byte header
followed by length-delimited records. Observations and stack records are native
protobuf; the three control records per capture keep the JSON object they have
always carried, so the agent's structural comparison with the native stop
response, the manifest and analysisInputs are unchanged, and that JSON is still
read with the strict parser.

The collector generates its codec with protox, a pure-Rust protobuf compiler,
so the pinned build containers still need no protoc. Both Java modules generate
from the same schema with protobuf-javalite, pinned by SHA-256 and relocated
like the other embedded dependencies. A record's length prefix is checked
against the record limit before any bytes are read, and a truncated final
record is the partial-mode tail that was previously a missing newline.

jonoffcpu-correlator.jar --dump --source <file> prints a capture as NDJSON with
stacks expanded; the Python tools that used to parse the stream directly now go
through it. The recommended capture file name is jonoffcpu-capture.pb.

Measured on the packaged glibc smoke: 604 -> 116 bytes per observation
(3337 before stack interning), 0.97 MB -> 0.17 MB for a comparable capture.
On Java 24+ protobuf's use of sun.misc.Unsafe makes the JDK print a one-time
deprecation warning, so the README tells users to pass
--sun-misc-unsafe-memory-access=allow.

AGENTS.md also gains the rule that a development machine never builds the other
architecture's native bundle under emulation; CI's native runners cover it.